[gd_scene load_steps=7 format=3 uid="uid://b3208hwqe3gof"]

[ext_resource type="Texture2D" uid="uid://c7uemcyjaddpj" path="res://assets_2d/Victory Screen.png" id="1_8txbw"]
[ext_resource type="Script" uid="uid://cgh10nj4vme2y" path="res://Victory Screen/victory_screen.gd" id="1_ydqhr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gp8aa"]
bg_color = Color(0.133333, 0.184314, 0.556863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydqhr"]
bg_color = Color(0.223529, 0.301961, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37swr"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkq2n"]
bg_color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="Victory Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydqhr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8txbw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.274
anchor_top = 0.5
anchor_right = 0.825
anchor_bottom = 0.554
offset_left = -135.648
offset_top = -142.0
offset_right = 27.6
offset_bottom = 195.008
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="VictoryText" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="Try Again" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_gp8aa")
theme_override_styles/normal = SubResource("StyleBoxFlat_ydqhr")
text = "Try Again"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_37swr")
theme_override_styles/normal = SubResource("StyleBoxFlat_jkq2n")
text = "Exit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Try Again" to="." method="Try_Again_Button_Pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="Exit_Button_Pressed"]
